// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tree should mount correctly 1`] = `
<TreeFile
  className=""
  level={0}
  name="package.json"
  parentPath=""
/>
`;

exports[`Tree should mount correctly 2`] = `
<TreeFolder
  className=""
  level={0}
  name="components"
  parentPath=""
/>
`;

exports[`Tree should mount correctly 3`] = `ReactWrapper {}`;

exports[`Tree should show spetial icon 1`] = `
<Tree
  className=""
  initialExpand={false}
>
  <TreeFile
    className=""
    icon={<Github />}
    level={0}
    name="Harry Potter I"
    parentPath=""
  />
</Tree>
`;

exports[`Tree should expand second folder 1`] = `
<Tree
  className=""
  initialExpand={false}
>
  <TreeFile
    className=""
    icon={<Github />}
    level={0}
    name="Harry Potter I"
    parentPath=""
  />
</Tree>
`;
